--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <section class="about-section">
     
         <div class="tabs">
-            <button class="tab" id="history-tab">Tommy</button>
-            <button class="tab" id="vision-tab">Bigdrop</button>
-            <button class="tab" id="goals-tab">Cuker</button>
-          </div>
+            <button class="tab" id="history-tab" name="Tommy" >Tommy</button>
+            <button class="tab" id="vision-tab" name="Bigdrop">Bigdrop</button>
+            <button class="tab" id="goals-tab" name="Cuker">Cuker</button>
+        </div>
 <div class="section">
     <h1 class="title-text-h1">Experience</h1>
     <div class="title-text">
